--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -3,3 +3,4 @@ $dark-primary-color: darken($primary-blue, 5%);
 $white: #fff;
 $off-white: #f5f8fa;
 $black: #000;
+$border-color: rgb(209, 209, 209);
