--- a/src/scss/_appHomePage.scss
+++ b/src/scss/_appHomePage.scss
@@ -391,7 +391,7 @@
   font-size: 1.8rem;
   width: 15rem;
   margin: 0 auto;
-  margin-bottom: 0.5rem;
+  // margin-bottom: 0.5rem;
   &:hover {
     background-color: rgba(255, 255, 255, 1);
   }
@@ -402,7 +402,7 @@
 .twitter__nav-list-item-margin {
   width: 20rem;
   margin-left: -2rem;
-  height: 27vh;
+  height: 28vh;
   display: flex;
   flex-direction: column-reverse;
 }
