--- a/src/scss/_appHomePage.scss
+++ b/src/scss/_appHomePage.scss
@@ -309,6 +309,11 @@
           padding-top: 2rem;
           &-users {
             width: 100%;
+            height: 85vh;
+            overflow: scroll;
+            &::-webkit-scrollbar {
+              display: none;
+            }
             // padding: 1rem 1rem;
 
             &-container {
