--- a/src/scss/_appHomePage.scss
+++ b/src/scss/_appHomePage.scss
@@ -259,6 +259,41 @@
             }
           }
         }
+        &-messages {
+          &-item {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            padding: 1rem;
+            border-radius: 10px;
+            &-userIcon {
+              width: 4rem;
+              height: 4rem;
+              border-radius: 50%;
+              display: flex;
+              object-fit: contain;
+
+              border-radius: 50%;
+              img {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                object-fit: cover;
+              }
+            }
+
+            &-second-item {
+              width: 90%;
+              &-name {
+                font-weight: 300;
+              }
+            }
+            &:hover {
+              background-color: #e1e8ed;
+            }
+          }
+        }
       }
     }
     &-suggested {
