--- a/src/scss/_appHomePage.scss
+++ b/src/scss/_appHomePage.scss
@@ -119,7 +119,7 @@
 
       &-heading {
         padding: 1rem 1rem;
-
+        height: 30%;
         width: 100%;
         border-bottom: 2px solid rgba(224, 224, 224, 0.3);
 
@@ -229,6 +229,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 70%;
+
         &-intro {
           &-heading {
             font-size: 2rem;
@@ -260,16 +262,21 @@
           }
         }
         &-messages {
+          height: 100%;
+          overflow: scroll;
+          &::-webkit-scrollbar {
+            display: none;
+          }
           &-item {
-            width: 100%;
+            width: 95%;
             display: flex;
             align-items: flex-start;
-            justify-content: space-between;
+
             padding: 1rem;
             border-radius: 10px;
             &-userIcon {
-              width: 4rem;
-              height: 4rem;
+              width: 3rem;
+              height: 3rem;
               border-radius: 50%;
               display: flex;
               object-fit: contain;
@@ -285,6 +292,8 @@
 
             &-second-item {
               width: 90%;
+              padding-left: 2rem;
+
               &-name {
                 font-weight: 300;
               }
