--- a/src/scss/_appHomePage.scss
+++ b/src/scss/_appHomePage.scss
@@ -273,6 +273,14 @@
             }
           }
         }
+        &-current-messages {
+          width: 100%;
+          height: 100%;
+          overflow: scroll;
+          &::-webkit-scrollbar {
+            display: none;
+          }
+        }
         &-messages {
           width: 100%;
           height: 100%;
