--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,4 @@
-$primary-blue: #1da1f2;
+$primary-blue: #0db84d;
 $dark-primary-color: darken($primary-blue, 5%);
 $white: #fff;
 $off-white: #f5f8fa;
